--- a/ConsoleAlphaPrototype/ConsoleAlphaPrototype.csproj
+++ b/ConsoleAlphaPrototype/ConsoleAlphaPrototype.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SharePointOnline.CSOM" Version="16.1.21116.12000" />
+    <PackageReference Include="PnP.Framework" Version="1.4.0" />
+  </ItemGroup>
+
 </Project>
